[package]
name = "ironkey"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ik"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
serde_json = "1.0.145"
ring = "0.17.14"
dirs = "6.0.0"
zeroize = "1.8.2"
log = "0.4.28"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
figlet-rs = "0.1.5"
rpassword = "7.3"
