[package]
name = "ironkey"
version = "0.0.2-beta"
edition = "2024"

[[bin]]
name = "ik"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
serde_json = "1.0.145"
ring = "0.17.14"
dirs = "6.0.0"
zeroize = "1.8.2"
log = "0.4.28"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
figlet-rs = "0.1.5"
rpassword = "7.3"
arboard = "3.4.1"
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
tempfile = "3.23.0"